css/tool-cool-slider.css
.shape {
	--pointer-border: 0;
	--pointer-border-hover: 0;
	--pointer-border-focus: 0;
	--pointer-border-radius: 0;
}
.shape-octogon .pointer-shape {
	-webkit-clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
	clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
}
.tooltips.is-after > .tooltip {
	z-index: 999!important;
}
.sliderHolder {
	height: 150px;
	margin: auto;
	display: flex;
	justify-content: center;
	align-items: center;
}

